added section search

--- a/app/index.html
+++ b/app/index.html
@@ -76,8 +76,45 @@
             </div>
         </div>
     </header>
+    <section class="search">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__inner-title">
+                    <span>Create Your Own</span>
+                    Digital Product Marketplace
+                </div>
+                <div class="search__inner-text">
+                    MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+                </div>
+                <div class="search__inner-links">
+                    <a href="#">
+                        View All Products
+                    </a>
+                    <a href="#">
+                        Popular Products
+                    </a>
+                </div>
+                <div class="search__inner-form">
+                    <form>
+                        <input type="text" placeholder="Search your products..." required>
+                        <div class="form__select">
+                            <select name="category">
+                                <option selected value="All Categories">All Categories</option>
+                                <option value="website">website</option>
+                                <option value="plugin">plugin</option>
+                                <option value="landing page">landing page</option>
+                            </select>
+                        </div>
+                        <button type="submit">
+                            Search now
+                        </button>
+                    </form>
+                </div>
 
-
+            </div>
+        </div>
+    </section>
+ 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
