--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,8 @@
         <div class="container">
             <div class="search__inner">
                 <div class="search__inner-title">
-                    <span>Create Your Own</span>
-                    Digital Product Marketplace
+                    Create Your Own
+                    <span>Digital Product Marketplace</span>
                 </div>
                 <div class="search__inner-text">
                     MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
@@ -114,7 +114,316 @@
             </div>
         </div>
     </section>
- 
+    <!-- <section class="content">
+        <div class="container">
+            <div class="content__inner">
+                <div class="content__inner-item">
+
+                </div>
+                <div class="content__inner-item">
+
+                </div>
+                <div class="content__inner-item">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="slider">
+        <div class="container">
+            <div class="slider_inner">
+
+            </div>
+        </div>
+    </section>
+     -->
+    <section class="products">
+        <div class="container">
+            <div class="products__top">
+                <div class="products__top-title">
+                    Newest Release Products
+                </div>
+                <div class="products__top-filter">
+                    Filter by:
+                </div>
+                <a class="products__top-btn" href="#">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </a>
+            </div>
+
+            <div class="products__inner">
+                <div class="products__inner-btn">
+                    <button type="button" data-filter=".category-plugin">Plugins</button>
+                    <button type="button" data-filter=".category-wordpress">WordPress</button>
+                    <button type="button" data-filter=".category-site">Site Template</button>
+                    <button type="button" data-filter=".category-psd">PSD Template</button>
+                    <button type="button" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" data-filter=".category-user">User Interface</button>
+                    <button type="button" data-filter=".category-landing">Landing Page</button>
+                    <button type="button" data-filter=".category-software">Software</button>
+                </div>
+                <div class="products__inner-box">
+
+                    <div class="product__item mix category-plugin">
+                        <div class="product__item-img" style="background-image: url(images/item-img2.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">Theme-Valley</a>
+                                <div class="item__info-category-logo" style="background-image: url(images/wpress-icon.png);">
+                                </div>
+                                <div class="item__info-category">
+                                    Plugin
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $20
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>90</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>246</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product__item mix category-psd">
+                        <div class="product__item-img" style="background-image: url(images/item-img1.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                Marketify Coffee Shop
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">
+                                    EchoTheme
+                                </a>
+                                <div class="item__info-category-logo" style="background-image: url(images/psd-icon.jpg);">
+                                </div>
+                                <div class="item__info-category">
+                                    PSD
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $18
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>48</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>50</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product__item mix category-html">
+                        <div class="product__item-img" style="background-image: url(images/item-img2.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                Bryson - Portfolio Template
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">Artcorner</a>
+                                <div class="item__info-category-logo" style="background-image: url(images/html-icon.jpg);">
+                                </div>
+                                <div class="item__info-category">
+                                    HTML
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $10
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>56</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>68</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product__item mix category-plugin">
+                        <div class="product__item-img" style="background-image: url(images/item-img2.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">Design-Hub</a>
+                                <div class="item__info-category-logo" style="background-image: url(images/wpress-icon.png);">
+                                </div>
+                                <div class="item__info-category">
+                                    Plugin
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $10-50
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>90</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>45</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product__item mix category-psd">
+                        <div class="product__item-img" style="background-image: url(images/item-img1.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                Marketify Coffee Shop
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">
+                                    AazzTech
+                                </a>
+                                <div class="item__info-category-logo" style="background-image: url(images/psd-icon.jpg);">
+                                </div>
+                                <div class="item__info-category">
+                                    PSD
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $10-50
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>48</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>50</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product__item mix category-html">
+                        <div class="product__item-img" style="background-image: url(images/item-img2.jpg);">
+                            <div class="item__btn" style="background-image: url(images/item-img.jpg);">
+                                <a href="#">More Info</a> 
+                                <a href="#">Live Demo</a> 
+                            </div>
+                        </div>
+                        <div class="product__item-content">
+                            <div class="item__title">
+                                Bryson - Portfolio Template
+                            </div>
+                            <div class="item__info">
+                                <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                                </div>
+                                <a href="#">Coder-Lab</a>
+                                <div class="item__info-category-logo" style="background-image: url(images/html-icon.jpg);">
+                                </div>
+                                <div class="item__info-category">
+                                    HTML
+                                </div>
+                            </div>
+                            <p class="item__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
+                        </div>
+                        <div class="product__item-details">
+                            <div class="product__item-details-price">
+                                $10
+                            </div>
+                            <div class="product__item-details-likes">
+                                <img src="images/icons/like.png" alt="">
+                                <div>56</div>
+                            </div>
+                            <div class="product__item-details-cart">
+                                <img src="images/icons/cart.png" alt="">
+                                <div>68</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="products__inner-botbtn">
+                    <button type="button" data-filter="all">All New Items</button>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
