--- a/app/index.html
+++ b/app/index.html
@@ -114,22 +114,46 @@
             </div>
         </div>
     </section>
-    <!-- <section class="content">
+    <section class="content">
         <div class="container">
             <div class="content__inner">
                 <div class="content__inner-item">
-
+                    <div class="content__item-img" style="background-image: url(images/content-item1.png);"></div>
+                    <div class="content__item-title">
+                        Best UX Research
+                    </div>
+                    <p class="content__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
                 </div>
                 <div class="content__inner-item">
-
+                    <div class="content__item-img" style="background-image: url(images/content-item2.png);"></div>
+                    <div class="content__item-title">
+                        Fully Responsive
+                    </div>
+                    <p class="content__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
                 </div>
                 <div class="content__inner-item">
-
+                    <div class="content__item-img" style="background-image: url(images/content-item3.png);"></div>
+                    <div class="content__item-title">
+                        Buy & Sell Easily
+                    </div>
+                    <p class="content__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="slider">
+    <!-- <section class="slider">
         <div class="container">
             <div class="slider_inner">
 
