--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MartPlace</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -66,9 +67,9 @@
                     </nav>
                     <div class="menu__inner-form">
                         <form>
-                            <input type="text" placeholder="Search product here..." required>
+                            <input type="search" placeholder="Search product here..." required>
                             <button type="submit">
-                                <img src="images/icons/search.png" alt="">
+                                <span class="lnr lnr-magnifier"></span>
                             </button>
                         </form>
                     </div>
@@ -96,7 +97,7 @@
                 </div>
                 <div class="search__inner-form">
                     <form>
-                        <input type="text" placeholder="Search your products..." required>
+                        <input type="search" placeholder="Search your products..." required>
                         <div class="form__select">
                             <select name="category">
                                 <option selected value="All Categories">All Categories</option>
@@ -155,7 +156,8 @@
     </section>
     <!-- <section class="slider">
         <div class="container">
-            <div class="slider_inner">
+            .slider__title
+            <div class="slider__inner">
 
             </div>
         </div>
@@ -221,11 +223,11 @@
                                 $20
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>90</div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>246</div>
                             </div>
                         </div>
@@ -264,11 +266,11 @@
                                 $18
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>48</div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>50</div>
                             </div>
                         </div>
@@ -305,11 +307,12 @@
                                 $10
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>56</div>
+                                <div class="rating" data-rate-value=4.5></div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>68</div>
                             </div>
                         </div>
@@ -346,11 +349,12 @@
                                 $10-50
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>90</div>
+                                <div class="rating" data-rate-value=4.5></div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>45</div>
                             </div>
                         </div>
@@ -389,11 +393,11 @@
                                 $10-50
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>48</div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>50</div>
                             </div>
                         </div>
@@ -430,11 +434,12 @@
                                 $10
                             </div>
                             <div class="product__item-details-likes">
-                                <img src="images/icons/like.png" alt="">
+                                <span class="lnr lnr-heart"></span>
                                 <div>56</div>
+                                <div class="rating" data-rate-value=4.5></div>
                             </div>
                             <div class="product__item-details-cart">
-                                <img src="images/icons/cart.png" alt="">
+                                <span class="lnr lnr-cart"></span>
                                 <div>68</div>
                             </div>
                         </div>
