added section slider

--- a/app/index.html
+++ b/app/index.html
@@ -154,15 +154,102 @@
             </div>
         </div>
     </section>
-    <!-- <section class="slider">
+    <section class="slider">
         <div class="container">
-            .slider__title
+            <div class="slider__top">
+                <div class="slider__top-title">
+                    Weekly Featured Products
+                </div>
+                <div class="slider__top-arrows">
+                </div>
+            </div>
             <div class="slider__inner">
+
+                <div class="slider__item">
+                    <div class="slider__item-img" style="background-image: url(images/slider/slider-img.jpg);">
+                    </div>
+                    <div class="slider__item-content">
+                        <div class="item__title slide__title">
+                            E-commerce Shopping Cart
+                        </div>
+                        <div class="item__info">
+                            <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                            </div>
+                            <a href="#">AazzTech</a>
+                            <div class="item__info-category-logo" style="background-image: url(images/wpress-icon.png);">
+                            </div>
+                            <div class="item__info-category">
+                                WordPress
+                            </div>
+                        </div>
+                        <p class="item__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                        </p>
+                        <div class="item_tags">
+                            <div class="tag">website</div>
+                            <div class="tag">plugin</div>
+                            <div class="tag">landing page</div>
+                        </div>
+                        <div class="item-details">
+                         <div class="details__price">$10 - $50</div>
+                         <div class="details__likes">
+                            <span class="lnr lnr-heart"></span>
+                            46
+                         </div>
+                         <div class="details__cart">
+                            <span class="lnr lnr-cart"></span>
+                            634
+                         </div>
+                         <div class="rating" data-rate-value=4.5></div>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="slider__item">
+                    <div class="slider__item-img" style="background-image: url(images/slider/slider-img.jpg);">
+                    </div>
+                    <div class="slider__item-content">
+                        <div class="item__title slide__title">
+                            E-commerce Shopping Cart
+                        </div>
+                        <div class="item__info">
+                            <div class="item__info-avatar" style="background-image: url(images/avatar-mini.png);">
+                            </div>
+                            <a href="#">AazzTech</a>
+                            <div class="item__info-category-logo" style="background-image: url(images/wpress-icon.png);">
+                            </div>
+                            <div class="item__info-category">
+                                WordPress
+                            </div>
+                        </div>
+                        <p class="item__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                        </p>
+                        <div class="item_tags">
+                            <div class="tag">website</div>
+                            <div class="tag">plugin</div>
+                            <div class="tag">landing page</div>
+                        </div>
+                        <div class="item-details">
+                         <div class="details__price">$10 - $50</div>
+                         <div class="details__likes">
+                            <span class="lnr lnr-heart"></span>
+                            46
+                         </div>
+                         <div class="details__cart">
+                            <span class="lnr lnr-cart"></span>
+                            634
+                         </div>
+                         <div class="rating" data-rate-value=4.5></div>
+                        </div>
+                    </div>
+                    
+                </div>
 
             </div>
         </div>
     </section>
-     -->
     <section class="products">
         <div class="container">
             <div class="products__top">
