added section statistics

--- a/app/index.html
+++ b/app/index.html
@@ -803,7 +803,57 @@
                         </div>
                     </div>
                 </div>
-                
+
+            </div>
+        </div>
+    </section>
+    <section class="statistics">
+        <div class="container">
+            <div class="statistics__inner">
+                <div class="statistics__item">
+                    <div class="item__icon">
+                        <span class="lnr lnr-briefcase"></span>
+                    </div>
+                    <div class="item__number">
+                        38,436
+                    </div>
+                    <div class="item__desc">
+                        items for sale
+                    </div>
+                </div>
+                <div class="statistics__item sales">
+                    <div class="item__icon">
+                        <span class="lnr lnr-cloud-download"></span>
+                    </div>
+                    <div class="item__number">
+                        3,736
+                    </div>
+                    <div class="item__desc">
+                        total sales
+                    </div>
+                </div>
+                <div class="statistics__item customers">
+                    <div class="item__icon">
+                        <span class="lnr lnr-smile"></span>
+                    </div>
+                    <div class="item__number">
+                        2,736
+                    </div>
+                    <div class="item__desc">
+                        happy customers
+                    </div>
+                </div>
+                <div class="statistics__item members">
+                    <div class="item__icon">
+                        <span class="lnr lnr-users"></span>
+                    </div>
+                    <div class="item__number">
+                        25,736
+                    </div>
+                    <div class="item__desc">
+                        members
+                    </div>
+                </div>
             </div>
         </div>
     </section>
