added section advantages

--- a/app/index.html
+++ b/app/index.html
@@ -810,7 +810,7 @@
     <section class="statistics">
         <div class="container">
             <div class="statistics__inner">
-                <div class="statistics__item">
+                <div class="statistics__item yellow">
                     <div class="item__icon">
                         <span class="lnr lnr-briefcase"></span>
                     </div>
@@ -821,7 +821,7 @@
                         items for sale
                     </div>
                 </div>
-                <div class="statistics__item sales">
+                <div class="statistics__item blue">
                     <div class="item__icon">
                         <span class="lnr lnr-cloud-download"></span>
                     </div>
@@ -832,7 +832,7 @@
                         total sales
                     </div>
                 </div>
-                <div class="statistics__item customers">
+                <div class="statistics__item green">
                     <div class="item__icon">
                         <span class="lnr lnr-smile"></span>
                     </div>
@@ -843,7 +843,7 @@
                         happy customers
                     </div>
                 </div>
-                <div class="statistics__item members">
+                <div class="statistics__item red">
                     <div class="item__icon">
                         <span class="lnr lnr-users"></span>
                     </div>
@@ -853,6 +853,104 @@
                     <div class="item__desc">
                         members
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__top">
+                <div class="advantages__title">
+                    Why Choose <span>MartPlace</span>
+                </div>
+                <div class="advantages__text">
+                    Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+                </div>
+            </div>
+            <div class="advantages__inner">
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">01</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-license"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        One Time Payment
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">02</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-magic-wand purple"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        Quality Products
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">03</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-lock green"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        100% Secure Payment
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">04</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-chart-bars yellow"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        Well Organized Code
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">05</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-leaf blue"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        Life Time Free Update
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__inner-item">
+                    <div class="advantages__item-num">06</div>
+                    <div class="advantages__item-icon">
+                        <span class="lnr lnr-phone red"></span>
+                    </div>
+                    <div class="advantages__item-title">
+                        Fast and Friendly Support
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
                 </div>
             </div>
         </div>
