--- a/app/index.html
+++ b/app/index.html
@@ -953,8 +953,41 @@
                     </p>
                 </div>
             </div>
+        </div>      
+    </section>
+    <section class="join">
+        <div class="container_fluid">
+            <div class="join__inner">
+                <div class="join__item" style="background-image: url(images/bg-blue.jpg)">
+                    <img class="join__icon" src="images/icons/sell.png" alt="">
+                    <div class="join__title">
+                        Sell Your Products
+                    </div>
+                    <div class="join__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                    </div>
+                    <a href="#" class="join__btn">
+                        Become an Author
+                    </a>
+                </div>
+                <div class="join__item" style="background-image: url(images/bg-purple.jpg)">
+                    <img class="join__icon" src="images/icons/buy.png" alt="">
+                    <div class="join__title">
+                        Start Shopping Today
+                    </div>
+                    <div class="join__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                    </div>
+                    <a href="#" class="join__btn">
+                        Start Shopping
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
