--- a/app/index.html
+++ b/app/index.html
@@ -1152,6 +1152,129 @@
             </div>
         </div>
     </section>
+    <section class="advantages2">
+        <div class="container">
+            <div class="advantages2__inner">
+                <div class="advantages2__item">
+                    <div class="advantages2__img" style="background-image: url(../images/guarantee.png);">
+
+                    </div>
+                    <div class="advantages2__title">
+                        30 Days Money Back <a href="#">Guarantee</a>
+                    </div>
+                </div>
+                <div class="advantages2__item">
+                    <div class="advantages2__img" style="background-image: url(../images/support.png);">
+
+                    </div>
+                    <div class="advantages2__title">
+                        Fast and Friendly <a class="purple" href="#">Support</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="join2">
+        <div class="container__fluid">
+            <div class="join2__inner">
+                <div class="join2__title">
+                    Ready to Join Our Marketplace!
+                </div>
+                <div class="join2__text">
+                    Over 25,000 designers and developers trust the MartPlace.
+                </div>
+                <a class="join2__btn" href="#">
+                    Join Us Today
+                </a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__col">
+                        <div class="footer__logo">
+                            <a href="#">
+                                <img src="images/logo-footer.png" alt="">
+                            </a>
+                        </div>
+                        <div class="footer__text">
+                            Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut scel erisque the mattis, leo quam.
+                        </div>
+                        <a href="tel:67898752235" class="footer__info">
+                            <span class="lnr lnr-phone-handset"></span>Phone: +6789-875-2235
+                        </a>
+                        <div class="footer__info">
+                            <span class="lnr lnr-envelope"></span>support@aazztech.com
+                        </div>
+                        <div class="footer__address">
+                            <span class="lnr lnr-map-marker"></span>
+                            <div>202 New Hampshire Avenue
+                                Northwest #100, New York-2573</div>
+                        </div>
+                    </div>
+                    <div class="footer__col col__menu">
+                        <div class="footer__title">
+                            Our Company
+                        </div>
+                        <ul class="footer__list">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">How It Work</a></li>
+                            <li><a href="#">Affiliates</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Copyright Notice</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col col__menu">
+                        <div class="footer__title">
+                            Help Support
+                        </div>
+                        <ul class="footer__list">
+                            <li><a href="#">Support Forum</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Support Policy</a></li>
+                            <li><a href="#">Refund Policy</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Buyers Faq</a></li>
+                            <li><a href="#">Sellers Faq</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col col__news">
+                        <div class="footer__title">
+                            Newsletter
+                        </div>
+                        <div class="footer__text">
+                            Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam!
+                        </div>
+                        <div class="footer__form">
+                            <form>
+                                <input type="email" placeholder="Enter email">
+                                <button type="submit">Submit</button>
+                            </form>
+                        </div>
+                        <ul class="footer__social">
+                            <li><a href="#" class="facebook"></a></li>
+                            <li><a href="#" class="twitter"></a></li>
+                            <li><a href="#" class="google"></a></li>
+                            <li><a href="#" class="pinterest"></a></li>
+                            <li><a href="#" class="linkedin"></a></li>
+                            <li><a href="#" class="ball"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copy">
+            <div class="container">
+                <div class="footer__copy--text">
+                    ©2017 <a href="#">MartPlace</a>. All rights reserved. Created by <a href="#">AazzTech</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
