--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,8 @@
                     </a>
                 </div>
                 <div class="search__inner-form">
+                    <div class="shadow1"></div>
+                    <div class="shadow2"></div>
                     <form>
                         <input type="search" placeholder="Search your products..." required>
                         <div class="form__select">
@@ -1070,14 +1072,16 @@
                 <div class="product__item">
                     <div class="product__item-img" style="background-image: url(images/news/news1.jpg);">
                     </div>
-                    <div class="product__item-content">
-                        <div class="news__title">
-                            Web Design Trends in 2017
+                    <div class="news__content">
+                        <div class="news__content--overflow">
+                            <div class="news__title">
+                                Web Design Trends in 2017
+                            </div>
+                            <p class="news__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
                         </div>
-                        <p class="news__text">
-                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
-                            the mattis, leo quam aliquet congue.
-                        </p>
                     </div>
                     <div class="product__item-details news__details">
                         <div class="news__date">
@@ -1097,15 +1101,17 @@
                 <div class="product__item">
                     <div class="product__item-img" style="background-image: url(images/news/news2.jpg);">
                     </div>
-                    <div class="product__item-content news__content">
-                        <div class="news__title">
-                            The best advices to start your
-                            own project
+                    <div class="news__content">
+                        <div class="news__content--overflow">
+                            <div class="news__title">
+                                The best advices to start your
+                                own project
+                            </div>
+                            <p class="news__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
                         </div>
-                        <p class="news__text">
-                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
-                            the mattis, leo quam aliquet congue.
-                        </p>
                     </div>
                     <div class="product__item-details news__details">
                         <div class="news__date">
@@ -1125,14 +1131,16 @@
                 <div class="product__item">
                     <div class="product__item-img" style="background-image: url(images/news/news3.jpg);">
                     </div>
-                    <div class="product__item-content">
-                        <div class="news__title">
-                            Best Related Post Plugin
+                    <div class="news__content">
+                        <div class="news__content--overflow">
+                            <div class="news__title">
+                                Best Related Post Plugin
+                            </div>
+                            <p class="news__text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </p>
                         </div>
-                        <p class="news__text">
-                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
-                            the mattis, leo quam aliquet congue.
-                        </p>
                     </div>
                     <div class="product__item-details news__details">
                         <div class="news__date">
@@ -1200,7 +1208,8 @@
                             </a>
                         </div>
                         <div class="footer__text">
-                            Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut scel erisque the mattis, leo quam.
+                            Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut scel erisque the
+                            mattis, leo quam.
                         </div>
                         <a href="tel:67898752235" class="footer__info">
                             <span class="lnr lnr-phone-handset"></span>Phone: +6789-875-2235
@@ -1247,7 +1256,8 @@
                             Newsletter
                         </div>
                         <div class="footer__text">
-                            Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam!
+                            Subscribe to get the latest news, update and offer information. Don't worry, we won't send
+                            spam!
                         </div>
                         <div class="footer__form">
                             <form>
